--- a/algobattle_web/templates/admin_teams.jinja
+++ b/algobattle_web/templates/admin_teams.jinja
@@ -9,29 +9,6 @@
 </script>
 
 
-<script type="text/x-template" id="team_row">
-  <tr>
-    <td>
-      <input v-if="editing" class="form-control form-control-sm" name="name" type="text" :placeholder="team.name">
-      <span v-else>${team.name}</span>
-    </td>
-    <td>
-      <select v-if="editing" class="form-select form-select-sm" name="context">
-        <option v-for="(ctx, id) in store.contexts" :value="id" :selected="id == team.context">${ctx.name}</option>
-      </select>
-      <span v-else>${store.contexts[team.context].name}</span>
-    </td>
-    <td><span>${members_str}</span></td>
-    <td class="text-end">
-      <div class="btn-group btn-group-sm" role="group">
-        <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete team" v-if="editing" @click="delete_team"><i class="bi bi-trash"></i></button>
-        <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit team" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
-        <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
-      </div>
-    </td>
-  </tr>
-</script>
-
 <script type="text/x-template" id="context_row">
   <tr>
     <td>
@@ -48,86 +25,140 @@
   </tr>
 </script>
 
+<script type="text/x-template" id="hoverBadge">
+  <span class="badge rounded-pill m-1" :class="{'text-bg-warning': !hover, 'text-bg-danger': hover}">
+    ${data.name}
+    <a @click.prevent="$emit('remove', data)" href="#" @mouseover="hover = true" @mouseleave="hover = false"><i class="bi bi-x-lg"></i></a>
+  </span>
+</script>
+
+<script type="text/x-template" id="teamWindow">
+  <div class="modal fade" id="teamModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true" ref="user_modal">
+    <div class="modal-dialog modal-dialog-centered">
+      <form class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="modalLabel">
+          <span v-if="action == 'edit'">Edit team</span>
+          <span v-else>Create new team</span>
+          </h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <label for="name" class="form-label">Name</label>
+          <input class="form-control w-em" type="text" v-model="data.name">
+          <label for="context" class="form-label">Context</label>
+          <select class="form-select w-em mb-3" name="context" v-model="data.context">
+            <option v-for="(context, id) in store.contexts" :value="id" :selected="id == data.context">${context.name}</option>
+          </select>
+          <label for="members" class="form-label mb-0">Members</label>
+          <div class="d-flex flex-row mb-1">
+            <hover-badge v-for="id in display_members" :data="store.users[id]" @remove="remove_user"></hover-badge>
+          </div>
+          <div class="btn-group dropend">
+            <button class="btn btn-primary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Add
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <form class="py-1 px-2">
+                  <div class="mb-3">
+                    <label for="searchName" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="searchName" v-model="search.name" @input="send_search">
+                  </div>
+                  <div>
+                    <label for="searchEmail" class="form-label">Email</label>
+                    <input type="text" class="form-control" id="searchEmail" v-model="search.email" @input="send_search">
+                  </div>
+                </form>
+              </li>
+              <li><hr class="dropdown-divider"></li>
+              <li v-for="(user, id) in search.result"><a class="dropdown-item" @click.prevent="add_user(user)" href="#">${user.name}</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger me-auto" title="Delete team" v-if="action == 'edit'" @click="delete_team">Delete team</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Discard</button>
+          <button type="button" class="btn btn-primary" @click="submit_data">Submit</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</script>
 
 <div id="app">
   <h3>Teams</h3>
-  <form id="team-table" @submit.prevent="edit_team" class="mb-5">
-    <table class="table" id="teams">
-      <thead>
-        <tr>
-          <th scope="col">Name</th>
-          <th scope="col">Context</th>
-          <th scope="col">Members</th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr is="vue:team-row" v-for="(team, id) in store.teams" :team="team" :key="id"></tr>
-      </tbody>
-    </table>
-  </form>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Context</th>
+        <th scope="col">Members</th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr v-for="(team, id) in store.teams" :team="team" :key="id">
+        <td>${team.name}</td>
+        <td>${store.contexts[team.context].name}</td>
+        <td>${team.members.map(u => store.users[u].name).join(", ")}</td>
+        <td class="text-end">
+          <button type="button" class="btn btn-sm btn-warning" title="Edit team" @click="open_modal('edit', team)"><i class="bi bi-pencil"></i></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
-  <h3>Create new team</h3>
-  <form id="create-team" @submit.prevent="create_team" class="mb-5">
-    <div class="row g-2">
-      <div class="col-md w-em">
-        <label for="name" class="form-label">Name</label>
-        <input class="form-control form-control-sm" name="name" type="text" required="required">
-      </div>
-      <div class="col-md w-em">
-        <label for="context-select" class="form-label">Context</label>
-        <select class="form-select form-select-sm" id="context-select" name="context">
-          <option v-for="(context, id) in store.contexts" :value="id">${context.name}</option>
-        </select>
-      </div>
-    </div>
-    <button type="submit" class="btn btn-primary mt-3">Create</button>
-  </form>
+  <div class="d-flex mb-3 pe-2">
+    <button type="button" class="btn btn-primary btn-sm me-auto" @click="open_modal('create', null)">Create new team</button>
+    <button type="button" class="btn btn-primary btn-sm position-relative" data-bs-toggle="collapse" data-bs-target="#filters" aria-expanded="false" aria-controls="filters">
+      <i class="bi bi-funnel-fill"></i>
+      <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle" v-if="has_params">
+        <span class="visually-hidden">Applied filters</span>
+      </span>
+    </button>
+    {% if max_page != 1 %}
+    <nav aria-label="Table pagination">
+      <ul class="pagination pagination-sm justify-content-end mb-0 ms-2">
+        <li class="page-item"><a class="page-link" :class="{disabled: {{page}} <= 1}" :href="apply_filters(1)"><i class="bi bi-chevron-double-left"></i></a></li>
+        <li class="page-item"><a class="page-link" :class="{disabled: {{page}} <= 1}" :href="apply_filters({{page}} - 1)"><i class="bi bi-chevron-compact-left"></i></a></li>
+        <li class="page-item"><a class="page-link" href="#">{{page}}</a></li>
+        <li class="page-item"><a class="page-link" :class="{disabled: {{page}} >= {{max_page}}}" :href="apply_filters({{page}} + 1)"><i class="bi bi-chevron-compact-right"></i></a></li>
+        <li class="page-item"><a class="page-link" :class="{disabled: {{page}} >= {{max_page}}}" :href="apply_filters({{max_page}})"><i class="bi bi-chevron-double-right"></i></a></li>
+      </ul>
+    </nav>
+    {% endif %}
+  </div>
 
-  <h3>Edit team membership</h3>
-  <div class="row g-2">
-    <div class="col-md w-em">
-      <label for="team" class="form-label">Team</label>
-      <select class="form-select form-select-sm" name="team" required="required" v-model="edit_team_member_team">
-        <option v-for="(team, id) in store.teams" :value="id">${team.name}</option>
-      </select>
-    </div>
-    <div class="col-md w-em">
-      <label for="user-select" class="form-label">User</label>
-      <select class="form-select form-select-sm" id="user-select" name="user" v-model="edit_team_member_user">
-        <option v-for="(user, id) in store.users" :value="id">${user.name}</option>
-      </select>
+  <div class="d-flex justify-content-end">
+    <div class="collapse w-xs" id="filters" aria-labelledby="filterHeading">
+      <div class="card card-body">
+        <div class="row mb-3">
+          <div class="col">
+            <label for="nameFilter" class="form-label mb-1">Name</label>
+            <input class="form-control w-em" id="nameFilter" type="text" v-model="filter.name">
+          </div>
+          <div class="col">
+            <label for="contextFilter" class="form-label mb-1">Context</label>
+            <select class="form-select w-em" id="contextFilter" v-model="filter.context">
+              <option :value="null"></option>
+              <option v-for="(context, id) in store.contexts" :value="id">${context.name}</option>
+            </select>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <label for="limitFilter" class="form-label mb-1">Limit</label>
+            <input class="form-control w-em" id="limitFilter" type="number" min="1" max="200" step="1" v-model="filter.limit">
+          </div>
+          <div class="col text-end align-self-end">
+            <a class="btn btn-primary" :href="apply_filters({{page}})" role="button">Apply</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <button class="btn btn-success mt-3 mb-5 me-2" @click="change_member($event, 'add')">Add Member</button>
-  <button class="btn btn-danger mt-3 mb-5" @click="change_member($event, 'remove')">Remove Member</button>
-
-  <div class="row gy-5">
-    <div class="col-md w-em">
-      <h3>Contexts</h3>
-      <form id="team-table" @submit.prevent="edit_context">
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Name</th>
-              <th scope="col"></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr is="vue:context-row" v-for="(context, id) in store.contexts" :context="context" :key="id"></tr>
-          </tbody>
-        </table>
-    </form>
-    </div>
-    <div class="col-md">
-      <h3>Create new context</h3>
-      <form id="create-context" @submit.prevent="create_context">
-        <label for="name" class="form-label">Name</label>
-        <input class="form-control form-control-sm w-em mb-3" name="name" type="text" required="required">
-        <button type="submit" class="btn btn-primary">Create</button>
-    </form>
-    </div>
-  </div>
+  <team-window :team="modal_team" :action="action" :modal="modal"></team-window>
 </div>
 
 
