--- a/algobattle_web/templates/admin_teams.jinja
+++ b/algobattle_web/templates/admin_teams.jinja
@@ -63,11 +63,11 @@
                 <form class="py-1 px-2">
                   <div class="mb-3">
                     <label for="searchName" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="searchName" v-model="search.name" @input="send_search">
+                    <input type="text" class="form-control form-control-sm" id="searchName" v-model="search.name" @input="send_search">
                   </div>
                   <div>
                     <label for="searchEmail" class="form-label">Email</label>
-                    <input type="text" class="form-control" id="searchEmail" v-model="search.email" @input="send_search">
+                    <input type="text" class="form-control form-control-sm" id="searchEmail" v-model="search.email" @input="send_search">
                   </div>
                 </form>
               </li>
